--- a/lib/fluorite_web/templates/page/index.html.eex
+++ b/lib/fluorite_web/templates/page/index.html.eex
@@ -1,11 +1,12 @@
-<div style="background-color:#9400D3;">
+<div style="background-color:black;">
   <div class="container">
     <div class="container-fluid" style=" color:white;">
-      <div class="mx-auto text-lg-center" style="padding-top: 5vh; padding-bottom: 60px;">
+      <div class="mx-auto text-lg-center" >
       <h1 style="font-size:50px;">Manage your customer note easily</h1>
       <div class="mt-3">
         <h5>Fluorite is a note taking app that is specifically design for customer validation process.</h5>
         <a type="button" class="btn btn-light mt-3" href="/pricing">See Pricing</a>
+        <img style="height: 400px" src=<%= Routes.static_path(@conn, "/images/fluorite.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
       </div>
       </div>
     </div>
@@ -23,8 +24,8 @@
   <div class= "container">
   <div class="container-fluid" style=" color:black;">
     <div class="mx-auto text-lg-center" style="padding-top: 5vh; padding-bottom: 20px;">
-    <h1 style="font-size:30px;" >Notes that you don't look at is useless</h1>
-    <h5 class="mt-3">Tag your notes so you can sort, mixed and rearranged it to provide a more meaningful insight.</h5>
+    <h1 style="font-size:30px;" >A good note is the one you look at</h1>
+    <h5 class="mt-3">The more notes you created, the more noise it become. Tag your notes so you can sort, mixed and rearranged it to provide a more meaningful insight.</h5>
     </div>
   </div>
   </div>
@@ -32,8 +33,8 @@
 <div class = "container" style="background-color: #f6f6f6;">
   <div class="container-fluid" style=" color:black;">
     <div class="mx-auto text-lg-center" style="padding-top: 5vh; padding-bottom: 20px;">
-    <h1 style="font-size:30px;">Customer emotion is as important as the note</h1>
-    <h5 style="color: #495057" class="mt-3">Use emoji to better describe your customer emotion during the conversation.</h5>
+    <h1 style="font-size:30px;">Customer emotion is important</h1>
+    <h5 style="color: #495057" class="mt-3">Use emoji to better describe your customer expression during the conversation.</h5>
     </div>
   </div>
 </div>
