--- a/lib/fluorite_web/templates/page/pricing.html.eex
+++ b/lib/fluorite_web/templates/page/pricing.html.eex
@@ -1,6 +1,6 @@
 <div class = "container" style="padding-top: 5 vh; ">
   <div class="container-fluid">
-    <div class="mx-auto text-lg-center" style="padding-top: 5vh; padding-bottom: 20px;">
+    <div class="mx-auto text-center" style="padding-top: 10vh; padding-bottom: 20px;">
     <h2>One time purchase.</h2>
     <h1 style="font-size:80px;">$4.99</h1>
     <div class="mt-3 mx-auto">
