--- a/lib/fluorite_web/templates/page/email.html.eex
+++ b/lib/fluorite_web/templates/page/email.html.eex
@@ -16,8 +16,8 @@
       <%= submit "Submit", class: "btn btn-dark mt-3"%>
     <% end %>
     
-    <h5 style="color: #495057; margin-top: 50px; margin-bottom: 20px;">We are also accepting 10 pre-order for Fluorite. 8 pre-order left. Save $3 by pre-ordering it now!</h5>
-
+    <h5 style="color: #495057; margin-top: 50px; margin-bottom: 20px;">We are also accepting 10 pre-order for Fluorite. Save $3 by pre-ordering it now!</h5>
+<h6 style="color: #495057;">8 pre-order left.</h6>
 
 
 <!-- Load Stripe.js on your website. -->
@@ -33,6 +33,7 @@
 >
   Pre-Order $1.99
 </button>
+
 
 <div id="error-message"></div>
 
