--- a/lib/fluorite_web/templates/page/index.html.eex
+++ b/lib/fluorite_web/templates/page/index.html.eex
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="container-fluid" style=" color:white;">
       <div class="mx-auto text-lg-center" >
-      <h1 style="font-size:50px;">Manage your customer note easily</h1>
+      <h1 style="font-size:50px;">Build your customer relationship</h1>
       <div class="mt-3">
-        <h5>Fluorite is a note taking app that is specifically design for customer validation process.</h5>
+        <h5>Fluorite is an app to help you nurture your relationship with your customer and prospect.</h5>
         <a type="button" class="btn btn-light mt-3" href="/pricing">See Pricing</a>
-        <img style="height: 400px" src=<%= Routes.static_path(@conn, "/images/fluorite.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
+        <img style="height: 400px" src=<%= Routes.static_path(@conn, "/images/todo.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
       </div>
       </div>
     </div>
@@ -14,27 +14,31 @@
 </div>
 <div class = "container"  style="background-color: #f6f6f6;">
   <div class="container-fluid" style=" color:black;">
-    <div class="mx-auto text-lg-center" style="padding-top: 5vh; padding-bottom: 20px;">
-    <h1 style="font-size:30px;">Your potential customer could be anywhere and at anytime</h1>
-    <h5 style="color: #495057" class="mt-3">Quickly create and access your customer note so you don't miss out on anything important.</h5>
+    <div class="mx-auto text-lg-center" style="padding-top: 5vh;">
+    <h1 style="font-size:30px;">Get a reminder on your customer birthday</h1>
+    <h5 style="color: #495057" class="mt-3">Fluorite will also generate a message for you to text so you don't have to.</h5>
+    <img style="height: 120px" src=<%= Routes.static_path(@conn, "/images/whatsapp.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
     </div>
   </div>
 </div>
 <div style="background-color:white;">
   <div class= "container">
   <div class="container-fluid" style=" color:black;">
-    <div class="mx-auto text-lg-center" style="padding-top: 5vh; padding-bottom: 20px;">
-    <h1 style="font-size:30px;" >A good note is the one you look at</h1>
-    <h5 class="mt-3">The more notes you created, the more noise it become. Tag your notes so you can sort, mixed and rearranged it to provide a more meaningful insight.</h5>
+    <div class="mx-auto text-lg-center" style="padding-top: 5vh;">
+    <h1 style="font-size:30px;" >Follow up on previous prospect</h1>
+    <h5 class="mt-3">Fluorite will remind you when it's time to follow up with your previous prospect.</h5>
+      <img style="height: 500px" src=<%= Routes.static_path(@conn, "/images/info.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
     </div>
   </div>
   </div>
 </div>
 <div class = "container" style="background-color: #f6f6f6;">
   <div class="container-fluid" style=" color:black;">
-    <div class="mx-auto text-lg-center" style="padding-top: 5vh; padding-bottom: 20px;">
-    <h1 style="font-size:30px;">Customer emotion is important</h1>
-    <h5 style="color: #495057" class="mt-3">Use emoji to better describe your customer expression during the conversation.</h5>
+    <div class="mx-auto text-lg-center" style="padding-top: 5vh;">
+    <h1 style="font-size:30px;">Get customized image for public holidays</h1>
+    <h5 style="color: #495057" class="mt-3">Fluorite will create an image for every public holiday.</h5>
+          <img style="height: 500px" src=<%= Routes.static_path(@conn, "/images/event_day.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
+
     </div>
   </div>
 </div>
