--- a/lib/fluorite_web/templates/page/index.html.eex
+++ b/lib/fluorite_web/templates/page/index.html.eex
@@ -2,25 +2,36 @@
   <div class="container">
     <div class="container-fluid" style=" color:white;">
       <div class="mx-auto text-lg-center" >
-      <h1 style="font-size:50px;">Build your customer relationship</h1>
+      <h1 style="font-size:50px;">Your personal helper for building customer relationship</h1>
       <div class="mt-3">
         <h5>Fluorite is an app to help you nurture your relationship with your customer and prospect.</h5>
         <a type="button" class="btn btn-light mt-3" href="/pricing">See Pricing</a>
-        <img style="height: 400px" src=<%= Routes.static_path(@conn, "/images/todo.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
+        <img style="height: 300px" src=<%= Routes.static_path(@conn, "/images/todo.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
       </div>
       </div>
     </div>
   </div>
 </div>
-<div class = "container"  style="background-color: #f6f6f6;">
+<div style="background-color:white;">
+<div class = "container"  style="background-color: white;">
+  <div class="container-fluid" style=" color:black;">
+    <div class="mx-auto text-lg-center" style="padding-top: 5vh; padding-bottom: 5vh;">
+    <h1 style="font-size:30px;">Never miss your customer important event's.</h1>
+    <h5 style="color: #495057" class="mt-3">Fluorite will remind you when their birthday and other event is coming so you don't miss it.</h5>
+    </div>
+  </div>
+</div>
+</diva>
+<div class = "container" style="background-color: #f6f6f6;">
   <div class="container-fluid" style=" color:black;">
     <div class="mx-auto text-lg-center" style="padding-top: 5vh;">
-    <h1 style="font-size:30px;">Get a reminder on your customer birthday</h1>
-    <h5 style="color: #495057" class="mt-3">Fluorite will also generate a message for you to text so you don't have to.</h5>
-    <img style="height: 120px" src=<%= Routes.static_path(@conn, "/images/whatsapp.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
+    <h1 style="font-size:30px;">Automate text and image.</h1>
+    <h5 style="color: #495057" class="mt-3">Fluorite will prepare a custom text and image for you to use. All you need to do is copy and paste!</h5>
+          <img style="height: 500px" src=<%= Routes.static_path(@conn, "/images/event_day.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
     </div>
   </div>
 </div>
+
 <div style="background-color:white;">
   <div class= "container">
   <div class="container-fluid" style=" color:black;">
@@ -32,15 +43,6 @@
   </div>
   </div>
 </div>
-<div class = "container" style="background-color: #f6f6f6;">
-  <div class="container-fluid" style=" color:black;">
-    <div class="mx-auto text-lg-center" style="padding-top: 5vh;">
-    <h1 style="font-size:30px;">Get customized image for public holidays</h1>
-    <h5 style="color: #495057" class="mt-3">Fluorite will create an image for every public holiday.</h5>
-          <img style="height: 500px" src=<%= Routes.static_path(@conn, "/images/event_day.png") %> class="rounded mx-auto d-block mt-5" alt="Responsive image">
 
-    </div>
-  </div>
-</div>
 
 
